--- a/THANKS
+++ b/THANKS
@@ -4,3 +4,5 @@ maps (www.sentex.net/~dchapes/ifm).
 
 Thanks to Dan Eble (eble@ticalc.org) for patches to improve PostScript
 output, and a bug fix.
+
+Thanks to Elijah Griffin for asciimapper.
