--- a/README
+++ b/README
@@ -107,6 +107,6 @@ IFM and its utility programs are free software, and you may redistribute
 them under certain conditions; see the file called COPYING for details.
 
 Feel free to send comments, bug reports, suggestions, etc. to me.  I am
-Glenn Hutchings (zondo@pillock.freeserve.co.uk).
+Glenn Hutchings (zondo42@googlemail.com).
 
 Happy mapping!
