--- a/doc/ifm.lyx
+++ b/doc/ifm.lyx
@@ -66,7 +66,7 @@ titlepage
 
 \layout Quote
 \pagebreak_top \align center 
-Copyright © 2005 Glenn Hutchings
+Copyright © 1997-2006 Glenn Hutchings
 \layout Quote
 
 Permission is granted to copy, distribute and/or modify this document under
