--- a/THANKS
+++ b/THANKS
@@ -5,4 +5,7 @@ maps (www.sentex.net/~dchapes/ifm).
 Thanks to Dan Eble (eble@ticalc.org) for patches to improve PostScript
 output, and a bug fix.
 
+Thanks to Lee Bigelow (ligelowbee@yahoo.com) for enhancements to the GNU
+Emacs IFM mode.
+
 Thanks to Elijah Griffin for asciimapper.
