--- a/doc/ifm.lyx
+++ b/doc/ifm.lyx
@@ -1,4 +1,4 @@
-#LyX 1.4.1 created this file. For more info see http://www.lyx.org/
+#LyX 1.4.2 created this file. For more info see http://www.lyx.org/
 \lyxformat 245
 \begin_document
 \begin_header
@@ -8360,7 +8360,7 @@ preview false
 \begin_layout Standard
 Printed, it looks like Figure\InsetSpace ~
 
-\begin_inset LatexCommand \vref{fig:scr2ifm-map}
+\begin_inset LatexCommand \ref{fig:scr2ifm-map}
 
 \end_inset
 
