--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 ****************************************************************************
+* Version 5.3                                                   5 Dec 2006 *
+****************************************************************************
+
+* Er... not much here yet.
+
+****************************************************************************
 * Version 5.2                                                   7 Sep 2006 *
 ****************************************************************************
 
