--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,20 @@
 ****************************************************************************
+* Version 5.3                                                  15 Apr 2008 *
+****************************************************************************
+
+Additions
+=========
+
+* The GNU Emacs ifm-mode.el in the 'contrib' directory now has flymake
+  support, and a minor bug fix.
+
+Bug fixes
+=========
+
+* PostScript maps now conform properly to Adobe DSC.  This stops
+  Ghostscript 8.x barfing on them.
+
+****************************************************************************
 * Version 5.2                                                   7 Sep 2006 *
 ****************************************************************************
 
@@ -21,10 +37,6 @@ Changes
 * Several unused features which added needless complexity have been
   removed.  These are: preprocessing by gpp, expressions for real/integer
   values, and variable interpolation in strings.
-
-* To reduce package size, the Vars library which IFM uses is no longer
-  bundled with IFM.  You must install it separately, before building IFM.
-  See the README file for where to get it.
 
 Bug fixes
 =========
