Convert to rst.

--- a/THANKS
+++ b/THANKS
@@ -9,3 +9,7 @@ Thanks to Lee Bigelow (ligelowbee@yahoo.com) for enhancements to the GNU
 Emacs IFM mode.
 
 Thanks to Elijah Griffin for asciimapper.
+
+.. Local Variables:
+.. mode: rst
+.. End:
