--- a/THANKS
+++ b/THANKS
@@ -1,14 +1,12 @@
 * A big thanks to Dave Chapeskie (dchapes@ddm.wox.org) for lots of great
-  suggestions for improving IFM.
+  suggestions for improving IFM, and setting up the original IFM :ref:`web
+  page <ifm-maps>`.
 
 * Thanks to Dan Eble (eble@ticalc.org) for patches to improve PostScript
   output, and a bug fix.
 
 * Thanks to Lee Bigelow (ligelowbee@yahoo.com) for enhancements to the GNU
   Emacs IFM mode.
-
-* Thanks to Elijah Griffin (asciimapper@eli.users.panix.com) for
-  ``asciimapper``.
 
 .. Local Variables:
 .. mode: rst
