--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
-Version 5.3 (14 Oct 2008)
+Version 5.3 (15 Oct 2008)
 =========================
+
+* There's a new Perl script ``ifm2web``, which converts IFM maps to image
+  files suitable for the Interweb.
 
 * The documentation is now much prettier, thanks to `Sphinx
   <http://sphinx.pocoo.org>`_.  PDF documentation is no longer distributed,
@@ -101,7 +104,7 @@ Version 5.0 (23 Jan 2003)
 * New option: ``-style``, which sets global styles for all IFM objects.
 
 * New option: ``-set``, which lets you set variables from the command line.
-  To support this, the variable-setting syntax has been changed -- instead
+  To support this, the variable-setting syntax has been changed: instead
   of a space separating the driver name from the variable, there's now a
   period.
 
@@ -121,7 +124,7 @@ Version 5.0 (23 Jan 2003)
 * There's a new ``require`` keyword, which lets you say that a certain
   version of IFM (or later) is required for a map.
 
-* Changed implicit-link style behaviour -- the ``style`` clause on a room
+* Changed implicit-link style behaviour: the ``style`` clause on a room
   now applies to both the room and the implicit link, so it's now
   independent of its position relative to the ``dir`` clause.
 
@@ -148,7 +151,7 @@ Version 5.0 (23 Jan 2003)
 Version 4.1 (10 May 1999)
 =========================
 
-* Fixed minor task bug -- in special cases, giving items caused solver to
+* Fixed minor task bug: in special cases, giving items caused solver to
   fail to find newly-opened paths.
 
 * Fixed stupid blunder with DOS ``\r`` characters in one of the source
@@ -181,7 +184,7 @@ Version 4.0 (21 Apr 1999)
 * New ``-show`` option to show various things (defined variables, search
   path), also included in ``tkifm`` menus.
 
-* More information is now printed in item lists -- which tasks require an
+* More information is now printed in item lists: which tasks require an
   item, which tasks an item requires, etc.
 
 * Some example maps are now bundled with IFM, in the ``demos``
@@ -194,17 +197,17 @@ Version 4.0 (21 Apr 1999)
   used.  Specifically, variables can't be set according to type of output
   or per-map-section any more, only by output driver.
 
-* Removed formatted man page documentation -- now only Info, HTML and text
+* Removed formatted man page documentation: now only Info, HTML and text
   documentation is distributed.  If there are enough complaints, I'll put
   it back.
 
-* The ``puzzle`` and ``special`` attributes are now obsolete -- they're
+* The ``puzzle`` and ``special`` attributes are now obsolete; they're
   replaced by display styles.
 
 * ``tkifm`` now redisplays old map windows when refreshing the map.
 
 * Win32 version is now compiled with Cygwin b20, and so requires
-  ``cygwin1.dll`` (not ``cygwin.dll``) -- included in the distribution.
+  ``cygwin1.dll`` (not ``cygwin.dll``), included in the distribution.
   See ``README.win32`` for details.
 
 Version 3.0 (1 Oct 1998)
@@ -237,13 +240,13 @@ Version 3.0 (1 Oct 1998)
 * Removed PostScript documentation from distribution.
 
 * The ``times`` keyword is now obsolete (but still works, for
-  compatibility) -- just the repeat count is used instead.
+  compatibility); just the repeat count is used instead.
 
-* Fixed bug with ``drop all except`` clause -- was treating it as just a
+* Fixed bug with ``drop all except`` clause; it was treating it as just a
   simple ``drop`` clause.
 
-* Fixed bug in task path calculation -- didn't always choose the best route
-  between rooms.
+* Fixed bug in task path calculation; it didn't always choose the best
+  route between rooms.
 
 * Linking a room to itself with no ``dir`` clause now results in an error,
   instead of failing mysteriously at the map-drawing stage.
@@ -277,10 +280,10 @@ Version 2.0 (19 Aug 1998)
 
 * Package now has a test suite.
 
-* Links and joins can now be ``hidden`` -- which means they're used only
-  for task purposes.
+* Links and joins can now be ``hidden``, which means they're used only for
+  task purposes.
 
-* Removed ``groff`` output -- it's not worth supporting any more, now that
+* Removed ``groff`` output; it's not worth supporting any more, now that
   PostScript output works so well.
 
 * Text task output now prints details of the rooms you move through to get
